added-basic-sys-prompt

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,36 +38,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-05 18:31:34,691 - langchain_text_splitters.base - WARNING - Created a chunk of size 1088, which is longer than the specified 1000\n",
-      "2025-05-05 18:31:34,692 - utils.tools - INFO - Document types found: contracts, employees, company, products\n"
+      "2025-05-05 19:57:22,629 - utils.tools - INFO - Document types found: products, company, contracts, employees\n"
      ]
     }
    ],
    "source": [
     "prepared_documents = PrepareDocumentsFolder(folders)\n",
-    "chunks = prepared_documents.create_chunks()"
+    "chunks = prepared_documents.create_chunks(2000,500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-05 18:31:34,711 - utils.tools - INFO - Deleted existing collection at vector-db\n",
-      "2025-05-05 18:31:36,101 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:31:37,120 - utils.tools - INFO - Vectorstore created with 123 documents\n",
-      "2025-05-05 18:31:37,122 - utils.tools - INFO - Vectorstore 'vector-db' has 1,536 dimensions\n"
+      "2025-05-05 19:57:22,653 - chromadb.telemetry.product.posthog - INFO - Anonymized telemetry enabled. See                     https://docs.trychroma.com/telemetry for more information.\n",
+      "2025-05-05 19:57:22,787 - utils.tools - INFO - Deleted existing collection at vector-db\n",
+      "2025-05-05 19:57:23,745 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:57:24,126 - utils.tools - INFO - Vectorstore created with 66 documents\n",
+      "2025-05-05 19:57:24,128 - utils.tools - INFO - Vectorstore 'vector-db' has 1,536 dimensions\n"
      ]
     }
    ],
@@ -77,12 +77,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-05-05 19:57:24,568 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "/var/folders/w2/nyq_87_d7l5dzyd9hf6z84lw0000gn/T/ipykernel_88066/2146861124.py:9: LangChainDeprecationWarning: Please see the migration guide at: https://python.langchain.com/docs/versions/migrating_memory/\n",
+      "  memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "llm = ChatOpenAI(temperature=0.7, model_name=OPENAI_MODEL)\n",
+    "messages = [\n",
+    "            (\n",
+    "                \"system\",\n",
+    "                \"You are a helpful assistant for Insurellm HR Staff. Your task is to answer questions about regarding to the company.\",\n",
+    "            ),\n",
+    "        ]\n",
+    "llm = ChatOpenAI(temperature=0.7, model_name=OPENAI_MODEL,streaming=True)\n",
+    "llm.invoke(messages)\n",
     "memory = ConversationBufferMemory(memory_key='chat_history', return_messages=True)\n",
     "retriever = vectorstore.vectorstore.as_retriever()\n",
     "conversation_chain = ConversationalRetrievalChain.from_llm(llm=llm, retriever=retriever, memory=memory)"
@@ -90,22 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-05 18:32:25,175 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:32:27,527 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2025-05-05 19:57:25,483 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:57:26,171 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Insurellm is an innovative insurance tech startup founded in 2015 by Avery Lancaster, aimed at disrupting the insurance industry with its technology-driven products. The company offers four main software products: Carllm for auto insurance, Homellm for home insurance, Rellm for the reinsurance sector, and Marketllm, a marketplace connecting consumers with insurance providers. With 200 employees and over 300 clients worldwide, Insurellm is committed to transforming the insurance landscape through innovation and reliability.\n"
+      "Insurellm is an innovative insurance tech startup founded in 2015 by Avery Lancaster, aimed at disrupting the insurance industry with creative products. The company has grown to 200 employees and operates 12 offices across the US, offering four main software products: Carllm for auto insurance, Homellm for home insurance, Rellm for the reinsurance sector, and Marketllm, a marketplace connecting consumers with insurance providers. With over 300 clients worldwide, Insurellm is focused on providing effective solutions in the insurance technology space.\n"
      ]
     }
    ],
@@ -117,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,15 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-05 18:32:34,359 - httpx - INFO - HTTP Request: GET http://127.0.0.1:7875/gradio_api/startup-events \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:32:34,368 - httpx - INFO - HTTP Request: HEAD http://127.0.0.1:7875/ \"HTTP/1.1 200 OK\"\n"
+      "2025-05-05 19:57:28,376 - httpx - INFO - HTTP Request: GET http://127.0.0.1:7875/gradio_api/startup-events \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:57:28,385 - httpx - INFO - HTTP Request: HEAD http://127.0.0.1:7875/ \"HTTP/1.1 200 OK\"\n"
      ]
     },
     {
@@ -163,13 +179,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-05-05 18:32:34,849 - httpx - INFO - HTTP Request: GET https://api.gradio.app/pkg-version \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:32:44,910 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:32:45,249 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:32:46,086 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:33:23,049 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:33:23,836 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
-      "2025-05-05 18:33:28,761 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
+      "2025-05-05 19:57:29,126 - httpx - INFO - HTTP Request: GET https://api.gradio.app/pkg-version \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:57:46,283 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:57:47,393 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:57:48,151 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:58:19,513 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:58:20,127 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:58:20,862 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:58:54,082 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:58:54,789 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:58:55,561 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:59:33,087 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:59:34,037 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:59:34,904 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:59:56,483 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:59:57,838 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/embeddings \"HTTP/1.1 200 OK\"\n",
+      "2025-05-05 19:59:58,736 - httpx - INFO - HTTP Request: POST https://api.openai.com/v1/chat/completions \"HTTP/1.1 200 OK\"\n"
      ]
     }
    ],
